# hyplib

./: .gitignore  README.md  hyplib.sln
CsvLogger/: CMakeLists.txt  CsvLogger.c  CsvLogger.cpp  CsvLogger.h  CsvLogger.hpp  main.cpp  main_c.c  main_cpp.cpp
cmake-tutorial/: CMakeLists.txt
cmake-tutorial/hello-exe/: CMakeLists.txt
cmake-tutorial/say-hello/: CMakeLists.txt
cmake-tutorial/say-hello/src/say-hello/: hello.cpp
header/: TextLabelEditor.h  hyplibDef.h
hyplib/: change_file_extention.cpp  hyplib.vcxproj  hyplib.vcxproj.filters  hyplibDef.h
source/: AutoWhiteBalance.cpp  TextLabelEditor.cpp  get_filepath_in_directory.cpp  read_file.cpp  write_file.cpp
